docs: actualizacion de documentación Swagger - Restaurado `AuthController.php` y `UserController.php` a una versión anterior - Actualizado los Schemas de User para que coincidan con los métodos implementados en los controladores mencionados - Generada la documentación de la api con Swagger (se puede ver en http://localhost/api/documentation) - Actualizado la plantilla .env.example
